
* SOLR-17321: Remove Deprecated URL and replace it with URI in Preparation for Java 21 (Sanjay Dutt, David Smiley, Uwe Schindler)

* PR#2524: QueryResult refactoring so that it's only returned from SolrIndexSearcher instead of
  being provided to it.  Deprecated APIs in 9x; should be removed later. (David Smiley)

==================  9.6.1 ==================
Bug Fixes
---------------------
* SOLR-17261: Remove unintended timeout of 60 seconds for core loading. (Houston Putman)

* SOLR-17049: Actually mark all replicas down at startup and truly wait for them.
  This includes replicas that might not exist anymore locally. (Houston Putman, Vincent Primault)

* SOLR-17263: Fix 'Illegal character in query' exception in HttpJdkSolrClient (Andy Webb)

* SOLR-17275: SolrJ ZkClientClusterStateProvider, revert SOLR-17153 for perf regression when aliases are used. (Aparna Suresh)

* SOLR-17296: Remove (broken) singlePass attempt when reRankScale + debug is used, and fix underlying NPE. (hossman)

* SOLR-17307: Use the system file separator instead of an explicit '/' in CachingDirectoryFactory (Houston Putman, hossman)

Dependency Upgrades
---------------------
* PR#2308: Update dependency org.apache.commons:commons-compress to v1.26.1 (solrbot)

==================  9.6.0 ==================
New Features
---------------------
* SOLR-17141: Implement 'cpuAllowed' query parameter to limit the maximum CPU usage by a running query. (Andrzej Bialecki, Gus Heck, David Smiley)

* SOLR-599: Add a new SolrJ client using the JDK’s built-in Http Client.  (James Dyer)

* SOLR-16403: A new cluster singleton plugin to automatically remove inactive shards. (Paul McArthur, David Smiley)

* SOLR-16466: Admin UI - Make it optional to sort list of commandline args (Shawn Heisey, Vincenzo D'Amore via Christine Poerschke)

Improvements
---------------------
* SOLR-17119: When registering or updating a ConfigurablePlugin through the `/cluster/plugin` API,